<resources>
    <string name="app_name">Converge</string>

    <string name="navi_news">News</string>
    <string name="navi_video">Video</string>
    <string name="navi_history">History</string>
    <string name="navi_home">Home</string>

    <string name="toolbar_settings">Settings</string>

    <string name="collection">Collection</string>
    <string name="night_mode">Night Mode</string>
    <string name="no_pics">No Pics</string>
    <string name="about_software">About Software</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="language">Language</string>
    <string name="clear_cache">Clear Cache</string>

    <string name="language_dialog">Language</string>
    <string name="summary_no_pics">Do not load pictures</string>
    <string name="summary_auto_refresh">Load data from network automatically</string>

    <string name="press_again">Press again to exit</string>
    <string name="clear_success">Cache Clear Successfully</string>
    <string name="pull_to_refresh">Pull To REFRESH</string>
    <string name="information">&#160;&#160;汇聚新闻是一款集果壳科技网,网易热点视频,历史上的今天网站的资讯与一体的Android应用,便于用户浏览不同的新闻资讯。有收藏、语言选择、夜间模式、自动刷新等功能。\n
        &#160;所有数据均来自网络,仅供个人开发与技术交流使用。</string>
    <string name="share_to">Share to ...</string>
    <string-array name="languages">
        <item>English</item>
        <item>中文</item>
    </string-array>
    <string name="search">input the keyword</string>
    <string name="start_search">search</string>
    <string name="refresh_success">refresh success!!</string>
    <string name="refresh_fail">refresh fail,please try again</string>
</resources>
